--- a/style/visual.less
+++ b/style/visual.less
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 h1, h2 {
     padding: 0;
@@ -18,6 +19,7 @@ h1, h2 {
     flex-direction: column;
     margin: 1em 0;
     padding: 0 1.5em;
+    min-width: 10em;
     overflow: hidden;
     &:nth-child(n+2) {
         border-left: 1px solid #ABB2B9;
