--- a/style/visual.less
+++ b/style/visual.less
@@ -3,13 +3,20 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
-h1, h2 {
+
+h1 {
     padding: 0;
     margin: 0;
+    }
+
+h2 {
+    padding: 0;
+    margin: 0;
+    font-weight: normal;
 }
 
 .tile {
@@ -17,9 +24,9 @@ h1, h2 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 1em 0;
+    margin: 2em 0;
     padding: 0 1.5em;
-    min-width: 10em;
+    min-width: 12em;
     overflow: hidden;
     &:nth-child(n+2) {
         border-left: 1px solid #ABB2B9;
@@ -28,12 +35,12 @@ h1, h2 {
 
 .title {
     margin: 0;
-    padding: 0 0 1em 0;
+    padding: 0 0 5em 0;
 }
 
 .actual {
     width: 100%;
-    display: flex;
+    display: inherit;
     justify-content: space-around;
     align-items: center;
     text-overflow: ellipsis;
@@ -41,11 +48,11 @@ h1, h2 {
 }
 
 .indicator {
-    width: 0.75em;
-    height: 0.75em;
+    width: 0.74em;
+    height: 0.74em;
     border-radius: 50%;
-    margin-left: 0.5em;
-    display: flex;
+    margin-left: -3.65em;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     &>span {
